# exiftool-dll

./: CMakeLists.txt  bin2obj.c  build_lib.sh  exiftool.c  exiftool.h  version.rc
.github/workflows/: build.yml  sync-exiftool.yml
